maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:10: error: method isDirectionFree has return statement; needs result type
                            return true}
                            ^