maze.lessons.maze.pledge.PledgeMaze.scala.code
var sommeAngle = 0

def keepHandOnSideWall = {gauche();sommeAngle+=1; if (!estFaceMur) {avance()} else {while(estFaceMur()) {droite;sommeAngle-=1};avance()} }

def isDirectionFree(dir:Direction) = {var dirAct = getDirection();
                            setDirection(dir);
                            var mur = estFaceMur();
                            setDirection(dirAct);
                            return true}

override def run() { 
 
  
  
  while(getY!=0) { keepHandOnSideWall;setDirection(Direction.NORTH);while (isDirectionFree(Direction.NORTH)) {
    avance()} }
 
  
  setDirection(Direction.EAST); 
 while (!estSurBiscuit()) {keepHandOnSideWall}; prendBiscuit()
}